// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LoginScreen should render 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoginScreen
    email=""
    emailError=""
    isLoggingIn={false}
    loginError=""
    onEmailChange={[MockFunction]}
    onForgotPress={[MockFunction]}
    onLogInPress={[MockFunction]}
    onPasswordChange={[MockFunction]}
    onResetPasswordPress={[MockFunction]}
    onSignUpPress={[MockFunction]}
    password=""
    passwordError=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "behavior": "padding",
      "children": <CenteredScreen
        footerImage="forest"
      >
        <Component>
          <Pad
            height={100}
          />
          <Heading
            label="log in"
            size="large"
          />
        </Component>
        <Pad
          height={44}
        />
        <TextInput
          errorMessage=""
          hasError={false}
          onChange={[MockFunction]}
          type="Email"
          value=""
        />
        <Pad
          height={12}
        />
        <TextInput
          errorMessage=""
          hasError={false}
          onChange={[MockFunction]}
          type="Password"
          value=""
        />
        <Pad
          height={44}
        />
        <Button
          disabled={false}
          label="log in"
          onPress={[MockFunction]}
          type="Primary"
        />
        <Pad
          height={15}
        />
        <LinkGroup
          data={
            Array [
              Object {
                "label": "Forgot password",
                "onPress": [MockFunction],
              },
              Object {
                "label": "Sign up",
                "onPress": [MockFunction],
              },
            ]
          }
        />
      </CenteredScreen>,
      "enabled": true,
      "keyboardVerticalOffset": 0,
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component>
            <Pad
              height={100}
            />
            <Heading
              label="log in"
              size="large"
            />
          </Component>,
          <Pad
            height={44}
          />,
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Email"
            value=""
          />,
          <Pad
            height={12}
          />,
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Password"
            value=""
          />,
          false,
          <Pad
            height={44}
          />,
          <Button
            disabled={false}
            label="log in"
            onPress={[MockFunction]}
            type="Primary"
          />,
          <Pad
            height={15}
          />,
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ]
            }
          />,
        ],
        "footerImage": "forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Pad
                height={100}
              />,
              <Heading
                label="log in"
                size="large"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "height": 100,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "label": "log in",
                "size": "large",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "",
            "hasError": false,
            "onChange": [MockFunction],
            "type": "Email",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 12,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "",
            "hasError": false,
            "onChange": [MockFunction],
            "type": "Password",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "label": "log in",
            "onPress": [MockFunction],
            "type": "Primary",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 15,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data": Array [
              Object {
                "label": "Forgot password",
                "onPress": [MockFunction],
              },
              Object {
                "label": "Sign up",
                "onPress": [MockFunction],
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "behavior": "padding",
        "children": <CenteredScreen
          footerImage="forest"
        >
          <Component>
            <Pad
              height={100}
            />
            <Heading
              label="log in"
              size="large"
            />
          </Component>
          <Pad
            height={44}
          />
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Email"
            value=""
          />
          <Pad
            height={12}
          />
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Password"
            value=""
          />
          <Pad
            height={44}
          />
          <Button
            disabled={false}
            label="log in"
            onPress={[MockFunction]}
            type="Primary"
          />
          <Pad
            height={15}
          />
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ]
            }
          />
        </CenteredScreen>,
        "enabled": true,
        "keyboardVerticalOffset": 0,
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component>
              <Pad
                height={100}
              />
              <Heading
                label="log in"
                size="large"
              />
            </Component>,
            <Pad
              height={44}
            />,
            <TextInput
              errorMessage=""
              hasError={false}
              onChange={[MockFunction]}
              type="Email"
              value=""
            />,
            <Pad
              height={12}
            />,
            <TextInput
              errorMessage=""
              hasError={false}
              onChange={[MockFunction]}
              type="Password"
              value=""
            />,
            false,
            <Pad
              height={44}
            />,
            <Button
              disabled={false}
              label="log in"
              onPress={[MockFunction]}
              type="Primary"
            />,
            <Pad
              height={15}
            />,
            <LinkGroup
              data={
                Array [
                  Object {
                    "label": "Forgot password",
                    "onPress": [MockFunction],
                  },
                  Object {
                    "label": "Sign up",
                    "onPress": [MockFunction],
                  },
                ]
              }
            />,
          ],
          "footerImage": "forest",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Pad
                  height={100}
                />,
                <Heading
                  label="log in"
                  size="large"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "height": 100,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "label": "log in",
                  "size": "large",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": "",
              "hasError": false,
              "onChange": [MockFunction],
              "type": "Email",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 12,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": "",
              "hasError": false,
              "onChange": [MockFunction],
              "type": "Password",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "disabled": false,
              "label": "log in",
              "onPress": [MockFunction],
              "type": "Primary",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 15,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data": Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LoginScreen should render as logging in 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoginScreen
    email=""
    emailError=""
    isLoggingIn={true}
    loginError=""
    onEmailChange={[MockFunction]}
    onForgotPress={[MockFunction]}
    onLogInPress={[MockFunction]}
    onPasswordChange={[MockFunction]}
    onResetPasswordPress={[MockFunction]}
    onSignUpPress={[MockFunction]}
    password=""
    passwordError=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "behavior": "padding",
      "children": <CenteredScreen
        footerImage="forest"
      >
        <Component>
          <Pad
            height={100}
          />
          <Heading
            label="log in"
            size="large"
          />
        </Component>
        <Pad
          height={44}
        />
        <TextInput
          errorMessage=""
          hasError={false}
          onChange={[MockFunction]}
          type="Email"
          value=""
        />
        <Pad
          height={12}
        />
        <TextInput
          errorMessage=""
          hasError={false}
          onChange={[MockFunction]}
          type="Password"
          value=""
        />
        <Pad
          height={44}
        />
        <Button
          disabled={true}
          label="logging in ..."
          onPress={[MockFunction]}
          type="Primary"
        />
        <Pad
          height={15}
        />
        <LinkGroup
          data={
            Array [
              Object {
                "label": "Forgot password",
                "onPress": [MockFunction],
              },
              Object {
                "label": "Sign up",
                "onPress": [MockFunction],
              },
            ]
          }
        />
      </CenteredScreen>,
      "enabled": true,
      "keyboardVerticalOffset": 0,
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component>
            <Pad
              height={100}
            />
            <Heading
              label="log in"
              size="large"
            />
          </Component>,
          <Pad
            height={44}
          />,
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Email"
            value=""
          />,
          <Pad
            height={12}
          />,
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Password"
            value=""
          />,
          false,
          <Pad
            height={44}
          />,
          <Button
            disabled={true}
            label="logging in ..."
            onPress={[MockFunction]}
            type="Primary"
          />,
          <Pad
            height={15}
          />,
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ]
            }
          />,
        ],
        "footerImage": "forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Pad
                height={100}
              />,
              <Heading
                label="log in"
                size="large"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "height": 100,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "label": "log in",
                "size": "large",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "",
            "hasError": false,
            "onChange": [MockFunction],
            "type": "Email",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 12,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "",
            "hasError": false,
            "onChange": [MockFunction],
            "type": "Password",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": true,
            "label": "logging in ...",
            "onPress": [MockFunction],
            "type": "Primary",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 15,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data": Array [
              Object {
                "label": "Forgot password",
                "onPress": [MockFunction],
              },
              Object {
                "label": "Sign up",
                "onPress": [MockFunction],
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "behavior": "padding",
        "children": <CenteredScreen
          footerImage="forest"
        >
          <Component>
            <Pad
              height={100}
            />
            <Heading
              label="log in"
              size="large"
            />
          </Component>
          <Pad
            height={44}
          />
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Email"
            value=""
          />
          <Pad
            height={12}
          />
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Password"
            value=""
          />
          <Pad
            height={44}
          />
          <Button
            disabled={true}
            label="logging in ..."
            onPress={[MockFunction]}
            type="Primary"
          />
          <Pad
            height={15}
          />
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ]
            }
          />
        </CenteredScreen>,
        "enabled": true,
        "keyboardVerticalOffset": 0,
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component>
              <Pad
                height={100}
              />
              <Heading
                label="log in"
                size="large"
              />
            </Component>,
            <Pad
              height={44}
            />,
            <TextInput
              errorMessage=""
              hasError={false}
              onChange={[MockFunction]}
              type="Email"
              value=""
            />,
            <Pad
              height={12}
            />,
            <TextInput
              errorMessage=""
              hasError={false}
              onChange={[MockFunction]}
              type="Password"
              value=""
            />,
            false,
            <Pad
              height={44}
            />,
            <Button
              disabled={true}
              label="logging in ..."
              onPress={[MockFunction]}
              type="Primary"
            />,
            <Pad
              height={15}
            />,
            <LinkGroup
              data={
                Array [
                  Object {
                    "label": "Forgot password",
                    "onPress": [MockFunction],
                  },
                  Object {
                    "label": "Sign up",
                    "onPress": [MockFunction],
                  },
                ]
              }
            />,
          ],
          "footerImage": "forest",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Pad
                  height={100}
                />,
                <Heading
                  label="log in"
                  size="large"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "height": 100,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "label": "log in",
                  "size": "large",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": "",
              "hasError": false,
              "onChange": [MockFunction],
              "type": "Email",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 12,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": "",
              "hasError": false,
              "onChange": [MockFunction],
              "type": "Password",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "disabled": true,
              "label": "logging in ...",
              "onPress": [MockFunction],
              "type": "Primary",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 15,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data": Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LoginScreen should render on Android 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoginScreen
    email=""
    emailError=""
    isLoggingIn={false}
    loginError=""
    onEmailChange={[MockFunction]}
    onForgotPress={[MockFunction]}
    onLogInPress={[MockFunction]}
    onPasswordChange={[MockFunction]}
    onResetPasswordPress={[MockFunction]}
    onSignUpPress={[MockFunction]}
    password=""
    passwordError=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "behavior": "padding",
      "children": <CenteredScreen
        footerImage="forest"
      >
        <Component>
          <Pad
            height={100}
          />
          <Heading
            label="log in"
            size="large"
          />
        </Component>
        <Pad
          height={44}
        />
        <TextInput
          errorMessage=""
          hasError={false}
          onChange={[MockFunction]}
          type="Email"
          value=""
        />
        <Pad
          height={12}
        />
        <TextInput
          errorMessage=""
          hasError={false}
          onChange={[MockFunction]}
          type="Password"
          value=""
        />
        <Pad
          height={44}
        />
        <Button
          disabled={false}
          label="log in"
          onPress={[MockFunction]}
          type="Primary"
        />
        <Pad
          height={15}
        />
        <LinkGroup
          data={
            Array [
              Object {
                "label": "Forgot password",
                "onPress": [MockFunction],
              },
              Object {
                "label": "Sign up",
                "onPress": [MockFunction],
              },
            ]
          }
        />
      </CenteredScreen>,
      "enabled": true,
      "keyboardVerticalOffset": 0,
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component>
            <Pad
              height={100}
            />
            <Heading
              label="log in"
              size="large"
            />
          </Component>,
          <Pad
            height={44}
          />,
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Email"
            value=""
          />,
          <Pad
            height={12}
          />,
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Password"
            value=""
          />,
          false,
          <Pad
            height={44}
          />,
          <Button
            disabled={false}
            label="log in"
            onPress={[MockFunction]}
            type="Primary"
          />,
          <Pad
            height={15}
          />,
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ]
            }
          />,
        ],
        "footerImage": "forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Pad
                height={100}
              />,
              <Heading
                label="log in"
                size="large"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "height": 100,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "label": "log in",
                "size": "large",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "",
            "hasError": false,
            "onChange": [MockFunction],
            "type": "Email",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 12,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "",
            "hasError": false,
            "onChange": [MockFunction],
            "type": "Password",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "label": "log in",
            "onPress": [MockFunction],
            "type": "Primary",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 15,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data": Array [
              Object {
                "label": "Forgot password",
                "onPress": [MockFunction],
              },
              Object {
                "label": "Sign up",
                "onPress": [MockFunction],
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "behavior": "padding",
        "children": <CenteredScreen
          footerImage="forest"
        >
          <Component>
            <Pad
              height={100}
            />
            <Heading
              label="log in"
              size="large"
            />
          </Component>
          <Pad
            height={44}
          />
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Email"
            value=""
          />
          <Pad
            height={12}
          />
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Password"
            value=""
          />
          <Pad
            height={44}
          />
          <Button
            disabled={false}
            label="log in"
            onPress={[MockFunction]}
            type="Primary"
          />
          <Pad
            height={15}
          />
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ]
            }
          />
        </CenteredScreen>,
        "enabled": true,
        "keyboardVerticalOffset": 0,
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component>
              <Pad
                height={100}
              />
              <Heading
                label="log in"
                size="large"
              />
            </Component>,
            <Pad
              height={44}
            />,
            <TextInput
              errorMessage=""
              hasError={false}
              onChange={[MockFunction]}
              type="Email"
              value=""
            />,
            <Pad
              height={12}
            />,
            <TextInput
              errorMessage=""
              hasError={false}
              onChange={[MockFunction]}
              type="Password"
              value=""
            />,
            false,
            <Pad
              height={44}
            />,
            <Button
              disabled={false}
              label="log in"
              onPress={[MockFunction]}
              type="Primary"
            />,
            <Pad
              height={15}
            />,
            <LinkGroup
              data={
                Array [
                  Object {
                    "label": "Forgot password",
                    "onPress": [MockFunction],
                  },
                  Object {
                    "label": "Sign up",
                    "onPress": [MockFunction],
                  },
                ]
              }
            />,
          ],
          "footerImage": "forest",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Pad
                  height={100}
                />,
                <Heading
                  label="log in"
                  size="large"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "height": 100,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "label": "log in",
                  "size": "large",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": "",
              "hasError": false,
              "onChange": [MockFunction],
              "type": "Email",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 12,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": "",
              "hasError": false,
              "onChange": [MockFunction],
              "type": "Password",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "disabled": false,
              "label": "log in",
              "onPress": [MockFunction],
              "type": "Primary",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 15,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data": Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LoginScreen should render when showingKeyboard 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoginScreen
    email=""
    emailError=""
    isLoggingIn={false}
    loginError=""
    onEmailChange={[MockFunction]}
    onForgotPress={[MockFunction]}
    onLogInPress={[MockFunction]}
    onPasswordChange={[MockFunction]}
    onResetPasswordPress={[MockFunction]}
    onSignUpPress={[MockFunction]}
    password=""
    passwordError=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "behavior": "padding",
      "children": <CenteredScreen
        footerImage="forest"
      >
        <Pad
          height={44}
        />
        <TextInput
          errorMessage=""
          hasError={false}
          onChange={[MockFunction]}
          type="Email"
          value=""
        />
        <Pad
          height={12}
        />
        <TextInput
          errorMessage=""
          hasError={false}
          onChange={[MockFunction]}
          type="Password"
          value=""
        />
        <Pad
          height={44}
        />
        <Button
          disabled={false}
          label="log in"
          onPress={[MockFunction]}
          type="Primary"
        />
        <Pad
          height={15}
        />
        <LinkGroup
          data={
            Array [
              Object {
                "label": "Forgot password",
                "onPress": [MockFunction],
              },
              Object {
                "label": "Sign up",
                "onPress": [MockFunction],
              },
            ]
          }
        />
      </CenteredScreen>,
      "enabled": true,
      "keyboardVerticalOffset": 0,
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          null,
          <Pad
            height={44}
          />,
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Email"
            value=""
          />,
          <Pad
            height={12}
          />,
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Password"
            value=""
          />,
          false,
          <Pad
            height={44}
          />,
          <Button
            disabled={false}
            label="log in"
            onPress={[MockFunction]}
            type="Primary"
          />,
          <Pad
            height={15}
          />,
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ]
            }
          />,
        ],
        "footerImage": "forest",
      },
      "ref": null,
      "rendered": Array [
        null,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "",
            "hasError": false,
            "onChange": [MockFunction],
            "type": "Email",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 12,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "",
            "hasError": false,
            "onChange": [MockFunction],
            "type": "Password",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        false,
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "label": "log in",
            "onPress": [MockFunction],
            "type": "Primary",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 15,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data": Array [
              Object {
                "label": "Forgot password",
                "onPress": [MockFunction],
              },
              Object {
                "label": "Sign up",
                "onPress": [MockFunction],
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "behavior": "padding",
        "children": <CenteredScreen
          footerImage="forest"
        >
          <Pad
            height={44}
          />
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Email"
            value=""
          />
          <Pad
            height={12}
          />
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Password"
            value=""
          />
          <Pad
            height={44}
          />
          <Button
            disabled={false}
            label="log in"
            onPress={[MockFunction]}
            type="Primary"
          />
          <Pad
            height={15}
          />
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ]
            }
          />
        </CenteredScreen>,
        "enabled": true,
        "keyboardVerticalOffset": 0,
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            null,
            <Pad
              height={44}
            />,
            <TextInput
              errorMessage=""
              hasError={false}
              onChange={[MockFunction]}
              type="Email"
              value=""
            />,
            <Pad
              height={12}
            />,
            <TextInput
              errorMessage=""
              hasError={false}
              onChange={[MockFunction]}
              type="Password"
              value=""
            />,
            false,
            <Pad
              height={44}
            />,
            <Button
              disabled={false}
              label="log in"
              onPress={[MockFunction]}
              type="Primary"
            />,
            <Pad
              height={15}
            />,
            <LinkGroup
              data={
                Array [
                  Object {
                    "label": "Forgot password",
                    "onPress": [MockFunction],
                  },
                  Object {
                    "label": "Sign up",
                    "onPress": [MockFunction],
                  },
                ]
              }
            />,
          ],
          "footerImage": "forest",
        },
        "ref": null,
        "rendered": Array [
          null,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": "",
              "hasError": false,
              "onChange": [MockFunction],
              "type": "Email",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 12,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": "",
              "hasError": false,
              "onChange": [MockFunction],
              "type": "Password",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          false,
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "disabled": false,
              "label": "log in",
              "onPress": [MockFunction],
              "type": "Primary",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 15,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data": Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;

exports[`LoginScreen should render with login error 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LoginScreen
    email=""
    emailError=""
    isLoggingIn={false}
    loginError="Bergatron error"
    onEmailChange={[MockFunction]}
    onForgotPress={[MockFunction]}
    onLogInPress={[MockFunction]}
    onPasswordChange={[MockFunction]}
    onResetPasswordPress={[MockFunction]}
    onSignUpPress={[MockFunction]}
    password=""
    passwordError=""
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "behavior": "padding",
      "children": <CenteredScreen
        footerImage="forest"
      >
        <Component>
          <Pad
            height={100}
          />
          <Heading
            label="log in"
            size="large"
          />
        </Component>
        <Pad
          height={44}
        />
        <TextInput
          errorMessage=""
          hasError={false}
          onChange={[MockFunction]}
          type="Email"
          value=""
        />
        <Pad
          height={12}
        />
        <TextInput
          errorMessage=""
          hasError={false}
          onChange={[MockFunction]}
          type="Password"
          value=""
        />
        <TextInputError>
          Bergatron error
        </TextInputError>
        <Pad
          height={44}
        />
        <Button
          disabled={false}
          label="log in"
          onPress={[MockFunction]}
          type="Primary"
        />
        <Pad
          height={15}
        />
        <LinkGroup
          data={
            Array [
              Object {
                "label": "Forgot password",
                "onPress": [MockFunction],
              },
              Object {
                "label": "Sign up",
                "onPress": [MockFunction],
              },
            ]
          }
        />
      </CenteredScreen>,
      "enabled": true,
      "keyboardVerticalOffset": 0,
      "style": Object {
        "flex": 1,
      },
    },
    "ref": null,
    "rendered": Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "children": Array [
          <Component>
            <Pad
              height={100}
            />
            <Heading
              label="log in"
              size="large"
            />
          </Component>,
          <Pad
            height={44}
          />,
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Email"
            value=""
          />,
          <Pad
            height={12}
          />,
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Password"
            value=""
          />,
          <TextInputError>
            Bergatron error
          </TextInputError>,
          <Pad
            height={44}
          />,
          <Button
            disabled={false}
            label="log in"
            onPress={[MockFunction]}
            type="Primary"
          />,
          <Pad
            height={15}
          />,
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ]
            }
          />,
        ],
        "footerImage": "forest",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": Array [
              <Pad
                height={100}
              />,
              <Heading
                label="log in"
                size="large"
              />,
            ],
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "function",
              "props": Object {
                "height": 100,
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "class",
              "props": Object {
                "label": "log in",
                "size": "large",
              },
              "ref": null,
              "rendered": null,
              "type": [Function],
            },
          ],
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "",
            "hasError": false,
            "onChange": [MockFunction],
            "type": "Email",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 12,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "errorMessage": "",
            "hasError": false,
            "onChange": [MockFunction],
            "type": "Password",
            "value": "",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Bergatron error",
          },
          "ref": null,
          "rendered": "Bergatron error",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 44,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "disabled": false,
            "label": "log in",
            "onPress": [MockFunction],
            "type": "Primary",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "height": 15,
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "data": Array [
              Object {
                "label": "Forgot password",
                "onPress": [MockFunction],
              },
              Object {
                "label": "Sign up",
                "onPress": [MockFunction],
              },
            ],
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
      ],
      "type": [Function],
    },
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "behavior": "padding",
        "children": <CenteredScreen
          footerImage="forest"
        >
          <Component>
            <Pad
              height={100}
            />
            <Heading
              label="log in"
              size="large"
            />
          </Component>
          <Pad
            height={44}
          />
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Email"
            value=""
          />
          <Pad
            height={12}
          />
          <TextInput
            errorMessage=""
            hasError={false}
            onChange={[MockFunction]}
            type="Password"
            value=""
          />
          <TextInputError>
            Bergatron error
          </TextInputError>
          <Pad
            height={44}
          />
          <Button
            disabled={false}
            label="log in"
            onPress={[MockFunction]}
            type="Primary"
          />
          <Pad
            height={15}
          />
          <LinkGroup
            data={
              Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ]
            }
          />
        </CenteredScreen>,
        "enabled": true,
        "keyboardVerticalOffset": 0,
        "style": Object {
          "flex": 1,
        },
      },
      "ref": null,
      "rendered": Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "children": Array [
            <Component>
              <Pad
                height={100}
              />
              <Heading
                label="log in"
                size="large"
              />
            </Component>,
            <Pad
              height={44}
            />,
            <TextInput
              errorMessage=""
              hasError={false}
              onChange={[MockFunction]}
              type="Email"
              value=""
            />,
            <Pad
              height={12}
            />,
            <TextInput
              errorMessage=""
              hasError={false}
              onChange={[MockFunction]}
              type="Password"
              value=""
            />,
            <TextInputError>
              Bergatron error
            </TextInputError>,
            <Pad
              height={44}
            />,
            <Button
              disabled={false}
              label="log in"
              onPress={[MockFunction]}
              type="Primary"
            />,
            <Pad
              height={15}
            />,
            <LinkGroup
              data={
                Array [
                  Object {
                    "label": "Forgot password",
                    "onPress": [MockFunction],
                  },
                  Object {
                    "label": "Sign up",
                    "onPress": [MockFunction],
                  },
                ]
              }
            />,
          ],
          "footerImage": "forest",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": Array [
                <Pad
                  height={100}
                />,
                <Heading
                  label="log in"
                  size="large"
                />,
              ],
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "function",
                "props": Object {
                  "height": 100,
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "class",
                "props": Object {
                  "label": "log in",
                  "size": "large",
                },
                "ref": null,
                "rendered": null,
                "type": [Function],
              },
            ],
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": "",
              "hasError": false,
              "onChange": [MockFunction],
              "type": "Email",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 12,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "errorMessage": "",
              "hasError": false,
              "onChange": [MockFunction],
              "type": "Password",
              "value": "",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "children": "Bergatron error",
            },
            "ref": null,
            "rendered": "Bergatron error",
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 44,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "disabled": false,
              "label": "log in",
              "onPress": [MockFunction],
              "type": "Primary",
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "height": 15,
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "function",
            "props": Object {
              "data": Array [
                Object {
                  "label": "Forgot password",
                  "onPress": [MockFunction],
                },
                Object {
                  "label": "Sign up",
                  "onPress": [MockFunction],
                },
              ],
            },
            "ref": null,
            "rendered": null,
            "type": [Function],
          },
        ],
        "type": [Function],
      },
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
    "attachTo": undefined,
    "hydrateIn": undefined,
  },
}
`;
